--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,4 +1,5 @@
 <div class="container py-5">
-  <a href="/login">Ingreso</a> <br>
-  <a href="/locations">Ubicación de bicicletas</a>
+  <a href="/locations">Ubicación de bicicletas</a> <br>
+  <a href="/newBicycle">Agregar nueva bicicleta</a> <br>
+  <a href="/logout">Salir</a> <br>
 </div>
