--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,5 +1,24 @@
-<div class="container py-5">
-  <a href="/locations">Ubicación de bicicletas</a> <br>
-  <a href="/newBicycle">Agregar nueva bicicleta</a> <br>
-  <a href="/logout">Salir</a> <br>
+<div class="container d-flex h-100">
+  <div class="row justify-content-center align-self-center" align="center">
+
+    <a class="waves-effect waves-light btn col-8 h-100 green lighten-4 m-2"
+href="/bicycle" style="color: black">
+      <h5>Mis bicicletas</h5>
+    </a>
+
+    <a class="waves-effect waves-light btn col-8 h-100 blue lighten-4 m-2" href="/locations" style="color: black">
+      <h5>Ubicación de bicicletas</h5>
+    </a>
+
+    <a class="waves-effect waves-light btn col-8 h-100 lime lighten-4 m-2"
+href="/newBicycle" style="color: black">
+      <h5>Agregar nueva bicicleta</h5>
+    </a>
+
+    <a class="waves-effect waves-light btn col-8 h-100 orange lighten-4 m-2"
+href="/logout" style="color: black">
+      <h5>Salir</h5>
+    </a>
+
+  </div>
 </div>
