--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,6 +18,9 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/public/css/style.css">
 
+  <!-- Map CSS -->
+  <link rel="stylesheet" href="/public/css/map.css">
+
 </head>
 
 <body>
