--- a/views/locations.hbs
+++ b/views/locations.hbs
@@ -1,1 +1,31 @@
-<h1> Para la próxima semana </h1>
+<div id="map"></div>
+<script>
+  var map;
+  function initMap () {
+    map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: -12.134629, lng: -77.022203},
+    zoom: 16
+  })
+
+  function addMarker (coords) {
+    var marker = new google.maps.Marker({
+      position: coords,
+      map: map,
+      icon: {
+        url: 'http://i.imgur.com/AYFjkdJ.png',
+      }
+    })
+    var infoWindow = new google.maps.InfoWindow({
+      content: '<h6>UTEC</h6>'
+    })
+    marker.addListener('click', function () {
+     infoWindow.open(map, marker)
+    })
+  }
+
+  addMarker({lat: -12.134629, lng: -77.022203})
+
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOpyNedLt7ouwBMhS_hdNFYuosqW_irCA&callback=initMap" async defer></script>
