--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,8 +1,8 @@
-<div class="container my-auto my-auto">
-  <div class="row">
+<div class="container h-100">
+  <div class="row align-items-center h-100 ">
     <div class="col-8 mx-auto">
       <div class="card text-center">
-        <span class="card-header h4">Admin</span>
+        <span class="card-header h4 blue lighten-4">Admin</span>
         <div class="card-body">
           <form action="/login" method="POST">
             <div class="form-group">
@@ -21,4 +21,3 @@ placeholder="Usuario" autofocus>
     </div>
   </div>
 </div>
-
