--- a/views/locations.hbs
+++ b/views/locations.hbs
@@ -1,13 +1,15 @@
 <div id="map"></div>
+
 <script>
   var map;
   function initMap () {
     map = new google.maps.Map(document.getElementById('map'), {
     center: {lat: -12.134629, lng: -77.022203},
     zoom: 16
-  })
+    })
 
   function addMarker (coords) {
+    console.log(coords)
     var marker = new google.maps.Marker({
       position: coords,
       map: map,
@@ -23,7 +25,9 @@
     })
   }
 
-  addMarker({lat: -12.134629, lng: -77.022203})
+  {{#each locations}}
+    addMarker({lat: parseFloat("{{lat}}"), lng: parseFloat("{{lng}}") })
+  {{/each}}
 
 }
 </script>
