--- a/views/locations.hbs
+++ b/views/locations.hbs
@@ -11,14 +11,18 @@
   function addMarker (coords) {
     console.log(coords)
     var marker = new google.maps.Marker({
-      position: coords,
+      position: {
+        'lat': coords.lat,
+        'lng': coords.lng
+      },
       map: map,
       icon: {
         url: 'http://i.imgur.com/AYFjkdJ.png',
       }
     })
+    let foo = '<a href="/bicycle/' + coords.code + '\">+Info</a>'
     var infoWindow = new google.maps.InfoWindow({
-      content: '<h6>UTEC</h6>'
+      content: String(foo)
     })
     marker.addListener('click', function () {
      infoWindow.open(map, marker)
@@ -26,7 +30,7 @@
   }
 
   {{#each locations}}
-    addMarker({lat: parseFloat("{{lat}}"), lng: parseFloat("{{lng}}") })
+    addMarker({code: "{{code}}", lat: parseFloat("{{lat}}"), lng: parseFloat("{{lng}}") })
   {{/each}}
 
 }
