--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
   <div class="row align-items-center h-100 ">
     <div class="col-8 mx-auto">
       <div class="card text-center">
-        <span class="card-header h4 blue lighten-4">Admin</span>
+        <span class="card-header h4 grey darken-3">Admin</span>
         <div class="card-body">
           <form action="/login" method="POST">
             <div class="form-group">
@@ -12,7 +12,7 @@ placeholder="Usuario" autofocus>
             <div class="form-group">
               <input type="password" class="form-control" name="password" placeholder="Contraseña">
             </div>
-            <button class="btn waves-effect waves-light grey darken-3">
+            <button class="btn waves-effect waves-light grey darken-3 w-100">
               Ingresar
             </button>
           </form>
