--- a/views/addBicycle.hbs
+++ b/views/addBicycle.hbs
@@ -2,7 +2,7 @@
   <div class="row align-items-center h-100">
     <div class="col-8 mx-auto">
       <div class="card text-center">
-        <span class="card-header h4 blue lighten-4 ">Bicicleta</span>
+        <span class="card-header h4 grey darken-3 ">Bicicleta</span>
         <div class="card-body">
           <form action="/newBicycle" method="POST">
             <div class="form-group">
