--- a/public/css/breeze.css
+++ b/public/css/breeze.css
@@ -20,6 +20,13 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   font-weight: 300;
+  width: 100%;
+  height: 100%;
+  background: #50a3a2;
+  background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
 }
 body ::-webkit-input-placeholder {
   /* WebKit browsers */
@@ -48,13 +55,9 @@ body :-ms-input-placeholder {
   font-weight: 300;
 }
 .wrapper {
-  background: #50a3a2;
-  background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
   position: absolute;
   top: 0;
+  /*  top: 50%; */
   left: 0;
   right: 0;
   width: 100%;
@@ -66,8 +69,8 @@ body :-ms-input-placeholder {
 }
 .container {
   margin: 0 auto;
-  padding: 80px 0;
-  height: 400px;
+  /* padding: 80px 0; */
+  height: 800px;
   text-align: center;
 }
 .container h1 {
@@ -101,7 +104,7 @@ body :-ms-input-placeholder {
   font-weight: 200;
 }
 form {
-  padding: 20px 0;
+  /* padding: 20px 0; */
   position: relative;
   z-index: 2;
 }
