--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,19 +10,12 @@
     <!-- Bootstrap 4-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
     <!-- Materialize -->
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/public/css/style.css">
-
     <!-- Breeze CSS -->
     <link rel="stylesheet" href="/public/css/breeze.css">
-
 
     <!-- Map CSS -->
     <link rel="stylesheet" href="/public/css/map.css">
@@ -32,7 +25,9 @@
   <body>
 
     <div class="wrapper">
+      <div>
       {{> messages}}
+      </div>
       {{{ body }}}
     </div>
 
@@ -60,6 +55,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   </body>
+
+<script type="text/javascript">
+
+  // $('#flash').close(this)
+/*
+  $("[class*='alert']").click(function () {
+    console.log('Hola')
+  })*/
+/*
+  setTimeout(function() {
+    $("[class*='alert']")
+
+//    $("[class*='alert']").each(function(){console.log(this)})
+      //.fadeOut('fast')
+  }, 2000) */
+//  setTimeout(function() {
+//    $('.alert').fadeOut('fast');
+//}, 30000);
+
+</script>
 
 </html>
 
