--- a/views/partials/messages.hbs
+++ b/views/partials/messages.hbs
@@ -1,17 +1,25 @@
 {{#if success}}
+<!--
+
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     {{success}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"
+id="flash">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
+
+-->
 {{/if}}
 
 {{#if error}}
+<!--
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
     {{error}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close" 
+id="flash">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
+-->
 {{/if}}
