--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="/public/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/public/bici.png" sizes="any"
+    type="image/png">
     <title>Candado Inteligente</title>
 
     <!-- Bootstrap 4-->
