--- a/public/css/breeze.css
+++ b/public/css/breeze.css
@@ -16,6 +16,7 @@
   padding: 0;
   font-weight: 300;
 }
+html,
 body {
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
@@ -28,12 +29,14 @@ body {
   background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
 }
+html ::-webkit-input-placeholder,
 body ::-webkit-input-placeholder {
   /* WebKit browsers */
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   font-weight: 300;
 }
+html :-moz-placeholder,
 body :-moz-placeholder {
   /* Mozilla Firefox 4 to 18 */
   font-family: 'Source Sans Pro', sans-serif;
@@ -41,6 +44,7 @@ body :-moz-placeholder {
   opacity: 1;
   font-weight: 300;
 }
+html ::-moz-placeholder,
 body ::-moz-placeholder {
   /* Mozilla Firefox 19+ */
   font-family: 'Source Sans Pro', sans-serif;
@@ -48,6 +52,7 @@ body ::-moz-placeholder {
   opacity: 1;
   font-weight: 300;
 }
+html :-ms-input-placeholder,
 body :-ms-input-placeholder {
   /* Internet Explorer 10+ */
   font-family: 'Source Sans Pro', sans-serif;
@@ -62,7 +67,7 @@ body :-ms-input-placeholder {
   right: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /*  overflow: hidden; */
 }
 .wrapper.form-success .container h1 {
   transform: translateY(85px);
@@ -70,7 +75,7 @@ body :-ms-input-placeholder {
 .container {
   margin: 0 auto;
   /* padding: 80px 0; */
-  height: 800px;
+  /* height: 800px;*/
   text-align: center;
 }
 .container h1 {
@@ -107,6 +112,7 @@ form {
   /* padding: 20px 0; */
   position: relative;
   z-index: 2;
+  height: auto;
 }
 form input {
   appearance: none;
