--- a/public/css/breeze.less
+++ b/public/css/breeze.less
@@ -9,7 +9,7 @@
   font-weight: 300;
 }
 
-body{
+html, body {
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   font-weight: 300;
@@ -45,7 +45,6 @@ body{
   background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
 
-
 }
 
 .wrapper{
@@ -57,7 +56,7 @@ body{
   right: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+/*  overflow: hidden; */
 
   &.form-success{
     .container{
@@ -71,7 +70,7 @@ body{
 .container{
   margin: 0 auto;
   /* padding: 80px 0; */
-  height: 800px;
+  /* height: 800px;*/
   text-align: center;
 
   h1 {
@@ -115,6 +114,7 @@ form{
   /* padding: 20px 0; */
   position: relative;
   z-index: 2;
+  height: auto;
 
   input{
     display: block;
