--- a/views/addBicycle.hbs
+++ b/views/addBicycle.hbs
@@ -26,7 +26,7 @@ placeholder="Marca" value="{{brand}}">
 </div>
 
 
-            <button class="btn waves-effect waves-light grey darken-3 m-2">
+            <button class="btn waves-effect waves-light grey darken-3 m-2 w-100">
               Agregar
             </button>
           </form>
