--- a/views/locations.hbs
+++ b/views/locations.hbs
@@ -1,3 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="/public/bici.png" sizes="any"
+    type="image/png">
+    <title>Candado Inteligente</title>
+
+    <!-- Bootstrap 4-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!-- Materialize -->
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Breeze CSS -->
+
+    <!-- Map CSS -->
+    <link rel="stylesheet" href="/public/css/map.css">
+
+  </head>
+
+<body>
+
+
+
+
+
 <div id="map"></div>
 
 <script>
@@ -37,3 +67,7 @@
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOpyNedLt7ouwBMhS_hdNFYuosqW_irCA&callback=initMap" async defer></script>
+
+</body>
+
+</html>
