--- a/views/bicycle.hbs
+++ b/views/bicycle.hbs
@@ -1,5 +1,5 @@
     
-<div class="container d-flex h-100 my-auto">
+<div class="container d-flex my-auto">
 <!--  <div class="row justify-content-center align-self-center" align="center">
 -->
   <div class="row justify-content-center m-2" align="center">
