--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-
+<div class="foo"></div>
 <div class="container h-100">
   <div class="row align-items-center h-100 ">
     <div class="col-8 mx-auto">
