--- a/public/css/breeze.css
+++ b/public/css/breeze.css
@@ -109,7 +109,7 @@ body :-ms-input-placeholder {
   font-weight: 200;
 }
 form {
-  /* padding: 20px 0; */
+  padding: 20px 0;
   position: relative;
   z-index: 2;
   height: auto;
