--- a/public/css/breeze.less
+++ b/public/css/breeze.less
@@ -111,7 +111,7 @@ html, body {
 }
 
 form{
-  /* padding: 20px 0; */
+  padding: 20px 0;
   position: relative;
   z-index: 2;
   height: auto;
@@ -148,11 +148,11 @@ form{
     }
   }
 
+  
   button{
     appearance: none;
     outline: 0;
-    background-color: white;
-    border: 0;
+    background-color: whitespan border: 0;
     padding: 10px 15px;
     color: @prim;
     border-radius: 3px;
