--- a/views/infoBicycle.hbs
+++ b/views/infoBicycle.hbs
@@ -1,6 +1,6 @@
 
-<div class="container d-flex h-100">
-  <div class="row justify-content-center" align="center">
+<div class="container d-flex my-auto">
+  <div class="row justify-content-center m-2" align="center">
 
     <div class="container">
     <a href="#" class="waves-effect waves-light card col-10 yellow lighten-3
@@ -20,11 +20,15 @@ href="/bicycle" style="color: black">
 
     {{#each locations}}
 
-		<form class="form btn p-1 col-8 green lighten-3 p-0 m-2" 
-      target="_blank" action="https://www.google.com/maps/search/?api=1&query={{lat}},{{lng}}">
-      <button class="m-0 w-100 p-0 green lighten-3" style="color: black" type="submit">
-        <h5 class="m-0 p-0">Ubicación</h5>
-        <h5 class="m-0 p-0">{{time}}</h5>
+		<form class="form btn p-1 col-8 transparent p-0" 
+      target="_blank" action="https://www.google.com/maps/search/?api=1&query={{lat}},{{lng}}" 
+      style="min-height: 100px; overflow: hidden; ">
+      <button class="m-0 w-100 green lighten-3" style="color: black" type="submit">
+        <h5 class="green lighten-3 m-0"><strong>Ubicación: </strong> {{time}}</h5>
+        <h5 class="green lighten-3 m-0
+p-0"><strong>Usuario: </strong>{{givenName}} {{familyName}}</h5>
+        <h5 class="green lighten-3 m-0
+p-0"><strong>Correo: </strong>{{email}}</h5>
       </button>
 		</form>
 
