--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -54,27 +54,13 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+  <script>
+    $(document).ready(function() {
+        $('.collapsible').collapsible();
+    })
+  </script>
+
   </body>
-
-<script type="text/javascript">
-
-  // $('#flash').close(this)
-/*
-  $("[class*='alert']").click(function () {
-    console.log('Hola')
-  })*/
-/*
-  setTimeout(function() {
-    $("[class*='alert']")
-
-//    $("[class*='alert']").each(function(){console.log(this)})
-      //.fadeOut('fast')
-  }, 2000) */
-//  setTimeout(function() {
-//    $('.alert').fadeOut('fast');
-//}, 30000);
-
-</script>
 
 </html>
 
