--- a/public/css/breeze.less
+++ b/public/css/breeze.less
@@ -110,6 +110,13 @@ html, body {
 
 }
 
+a{
+  padding: 20px 0;
+  position: relative;
+  z-index: 2;
+  height: auto;
+}
+
 form{
   padding: 20px 0;
   position: relative;
