--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,34 +1,33 @@
 <div class="container d-flex h-100">
   <div class="row justify-content-center align-self-center" align="center">
 
-		<form class="form btn p-1 col-8 h-100 green lighten-4 p-0 m-2"
-      target="_blank" action="/bicycle">
-      <button class="m-0 w-100 green lighten-4" style="color: black" type="submit">
-        <h5 class="m-0">Mis biciletas</h5>
-      </button>
-		</form>
+    <a
+href="/bicycle"
+class="col-8 m-0 p-3 w-100 green lighten-4" style="color: black"
+target="_blank"><h5 class="m-0">Mis bicicletas</h5></a>
 
-    
-		<form class="form btn p-1 col-8 h-100 blue lighten-4 p-0 m-2"
-      target="_blank" action="/locations">
-      <button class="m-0 w-100 blue lighten-4" style="color: black" type="submit">
-        <h5 class="m-0">Ubicación de bicicletas</h5>
-      </button>
-		</form>
+    <br>
 
-		<form class="form btn p-1 col-8 h-100 lime lighten-4 p-0 m-2"
-      target="_blank" action="/newBicycle">
-      <button class="m-0 w-100 lime lighten-4" style="color: black" type="submit">
-        <h5 class="m-0">Agregar nueva bicicleta</h5>
-      </button>
-		</form>
+    <a
+href="/locations"
+class="col-8 m-0 p-3 w-100 blue lighten-4" style="color: black"
+target="_blank"><h5 class="m-0">Ubicación de bicicletas</h5></a>
 
-		<form class="form btn p-1 col-8 h-100 orange lighten-4 p-0 m-2"
-      target="_blank" action="/logout">
-      <button class="m-0 w-100 orange lighten-4" style="color: black" type="submit">
-        <h5 class="m-0">Salir</h5>
-      </button>
-		</form>
+    <br>
+
+    <a
+href="/newBicycle"
+class="col-8 m-0 p-3 w-100 lime lighten-4" style="color: black"
+target="_blank"><h5 class="m-0">Agregar nueva bicicleta</h5></a>
+
+    <br>
+
+    <a
+href="/logout"
+class="col-8 m-0 p-3 w-100 orange lighten-4" style="color: black"
+target="_blank"><h5 class="m-0">Salir</h5></a>
+
+    <br>
 
   </div>
 </div>
