Google map icon

--- a/views/infoBicycle.hbs
+++ b/views/infoBicycle.hbs
@@ -3,7 +3,7 @@
 
     {{#if current_lat}}
     <a href="https://www.google.com/maps/search/?api=1&query={{current_lat}},{{current_lng}}" class="col-10 m-0 p-3 w-100 yellow lighten-3" style="color: black"
-target="_blank">Ubicación actual</a>
+target="_blank">Ubicación actual <i class="material-icons" style="color:red">add_location</i></a>
 
     <br>    
 
@@ -58,14 +58,14 @@ target="_blank"><strong>Hora de finalizacion: </strong>{{finish}}</h5></a>
     <a
 href="https://www.google.com/maps/search/?api=1&query={{lat_from}},{{lng_from}}"
 class="col-10 m-0 p-3 w-100 green lighten-3" style="color: black"
-target="_blank">Ubicación del punto de salida</a>
+target="_blank">Ubicación del punto de salida<i class="material-icons" style="color:red">add_location</i></a>
 
     <br>
 
     <a
 href="https://www.google.com/maps/search/?api=1&query={{lat_to}},{{lng_to}}"
 class="col-10 m-0 p-3 w-100 green lighten-3" style="color: black"
-target="_blank">Ubicación del punto de llegada</a>
+target="_blank">Ubicación del punto de llegada<i class="material-icons" style="color:red">add_location</i></a>
 
     <br>
 
