--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -4,28 +4,28 @@
     <a
 href="/bicycle"
 class="col-8 m-0 p-3 w-100 green lighten-4" style="color: black"
-target="_blank"><h5 class="m-0">Mis bicicletas</h5></a>
+><h5 class="m-0">Mis bicicletas</h5></a>
 
     <br>
 
     <a
 href="/locations"
 class="col-8 m-0 p-3 w-100 blue lighten-4" style="color: black"
-target="_blank"><h5 class="m-0">Ubicación de bicicletas</h5></a>
+><h5 class="m-0">Ubicación de bicicletas</h5></a>
 
     <br>
 
     <a
 href="/newBicycle"
 class="col-8 m-0 p-3 w-100 lime lighten-4" style="color: black"
-target="_blank"><h5 class="m-0">Agregar nueva bicicleta</h5></a>
+><h5 class="m-0">Agregar nueva bicicleta</h5></a>
 
     <br>
 
     <a
 href="/logout"
 class="col-8 m-0 p-3 w-100 orange lighten-4" style="color: black"
-target="_blank"><h5 class="m-0">Salir</h5></a>
+><h5 class="m-0">Salir</h5></a>
 
     <br>
 
