--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,6 +21,9 @@
     <!-- Map CSS -->
     <link rel="stylesheet" href="/public/css/map.css">
 
+    <!-- Google Map icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   </head>
 
   <body>
